<resources>
    <string name="app_name">WorldNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WorldNews</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">News</string>
    <string name="nav_settings_text">Settings</string>

    <string name="dark_mode_key">dark_mode</string>
    <string name="dark_mode_enabled">dark_mode_enabled</string>
    <string name="dark_mode_system">dark_mode_system</string>
    <string name="dark_mode_disabled">dark_mode_disabled</string>
    <string name="dark_mode_title">Dark Mode</string>

    <string name="no_mail_client">No mail client</string>
    <string name="text_share">Share</string>
    <string name="text_share_app">Share this app</string>
    <string name="share_url">Hi! Check this link: \n</string>
    <string name="snackbar_close">CLOSE</string>
    <string name="load_error_message">Unable to update news for %s \nError occurred: %s</string>
    <string name="title_news">News</string>
    <string name="title_news_country">News: %s</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_updates_title">News updates</string>
    <string name="settings_country_dialog_title">Selected Country</string>
    <string name="settings_country_summary">Current: %s</string>
    <string name="settings_country_title">Select country</string>
    <string name="refresh_list">Refresh news</string>
    <string name="select_country">Select country</string>
    <string name="dialog_country_title">Select country</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="refresh_page">Refresh page</string>
    <string name="share">Share</string>
    <string name="article_image">Article image</string>
    <string name="open_source">Open source</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings_title">Settings</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="remove_from_bookmarks">Delete bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="start_refresh_summary_off">News are not updated when application starts</string>
    <string name="start_refresh_summary_on">News are updated when application starts</string>
    <string name="start_refresh_title">Refresh on start</string>
    <string name="swipe_down_summary_on">Swipe the news list down to update</string>
    <string name="swipe_down_summary_off">Swipe down the news list is disabled</string>
    <string name="swipe_down_title">Swipe down to refresh</string>

    <string name="error_msg_service_error">Service error</string>
    <string name="error_msg_connection_error">Connection error</string>
    <string name="error_msg_request_error">Data not received</string>
    <string name="error_msg_generic_error">Unexpected error</string>

    <string name="send_feedback">Send feedback</string>
    <string name="report_error">Report an error</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate the app</string>
    <string name="contacts_title">Contacts</string>
    <string name="nav_contacts">Contacts</string>
    <string name="error_report_subject">Error report</string>
    <string name="feedback_subject">Feedback about your app</string>

    <string name="rate_request_txt">Please rate our app and help \nus to improve it! </string>
    <string name="rating_feedback_hint">Please let us know what we can do to improve our app!</string>
    <string name="rating_feedback_type">Type here</string>
    <string name="rate_the_app_title">Rate the app</string>
    <string name="rate_later_btn">Rate later</string>
    <string name="send_rate_title">Rating</string>
    <string name="five_star_feedback">Rating ★★★★★</string>
    <string name="submit_rate_btn_txt">Submit</string>
    <string name="send_rate_feedback_btn">Send feedback</string>
    <string name="contact_share">Recommend this app</string>
    <string name="share_chooser_title">Recommend</string>
    <string name="nav_share_txt">Share App</string>
    <string name="share_advise_msg">Hi! I like this app and I thought it might help you: \n</string>
    <string name="rating_star">Rating Star</string>
    <string name="image_bookmark">Bookmark</string>
    <string name="bookmarks_empty_list_hint">You can add bookmarks here \nfor a quick access</string>
    <string name="news_empty_list_hint">You will see news here</string>
    <string name="no_connection">No connection</string>
    <string name="news_image_desc">News</string>
    <string name="selected_country_key">selected_country</string>
    <string name="start_refresh_key">start_refresh</string>
    <string name="swipe_refresh_key">swipe_refresh</string>
    <string name="updated_country_key">updated_country</string>

</resources>