<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_toolbar_bookmark_init"
        android:title="@string/add_to_favorite"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_toolbar_share"
        android:title="@string/share"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_source"
        android:icon="@drawable/ic_toolbar_share"
        android:title="@string/open_source"
        app:showAsAction="never"
        />
</menu>