<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="0dp">

        <LinearLayout

            android:id="@+id/rate_value_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/rate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/rate_the_app_title"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:gravity="center"
                android:text="@string/rate_request_txt"
                android:textAlignment="center"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="28dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rate_star_1"
                    style="@style/rate_star_wrapper"
                    android:tag="1">

                    <include layout="@layout/include_rate_star" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rate_star_2"
                    style="@style/rate_star_wrapper"
                    android:tag="2">

                    <include layout="@layout/include_rate_star" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rate_star_3"
                    style="@style/rate_star_wrapper"
                    android:tag="3">

                    <include layout="@layout/include_rate_star" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rate_star_4"
                    style="@style/rate_star_wrapper"
                    android:tag="4">

                    <include layout="@layout/include_rate_star" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rate_star_5"
                    style="@style/rate_star_wrapper"
                    android:tag="5">

                    <include layout="@layout/include_rate_star" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn_rate_late"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/rate_later_btn"
                        android:textColor="?attr/colorAccent" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn_rate_submit"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/submit_rate_btn_txt"
                        android:textColor="?attr/colorAccent" />


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rate_feedback_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/rate_title_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:gravity="center"
                android:text="@string/rating_feedback_hint"
                android:textAlignment="center"
                android:textSize="14sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="130dp">

                <EditText
                    android:id="@+id/et_rate_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/rating_feedback_type"
                    android:maxLines="8"
                    tools:ignore="Autofill"
                    android:inputType="text" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_rate_send"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/send_rate_feedback_btn"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</layout>