<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="34dp"
                android:id="@+id/bg_archive_left"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:id="@+id/action_image_left"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_bookmark_swipe"
                    android:contentDescription="@string/remove_bookmark" />

                <TextView
                    android:id="@+id/action_text_left"
                    android:layout_marginStart="22dp"
                    android:text="@string/remove_from_bookmarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/bg_archive_right"
                android:paddingEnd="34dp"
                android:alpha="0.8"
                android:gravity="center_vertical|end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/action_text_right"
                    android:layout_marginEnd="22dp"
                    android:text="@string/remove_from_bookmarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/action_image_right"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_bookmark_swipe"
                    android:contentDescription="@string/remove_bookmark" />

            </LinearLayout>

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/viewForeground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:elevation="1dp"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_wrap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="10dp"
                    >

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="16sp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_list_image"
                        />

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="2"
                        android:textSize="14sp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_title"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                    <ImageView
                        android:id="@+id/iv_list_image"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_menu_gallery"
                        android:contentDescription="@string/article_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </RelativeLayout>
</layout>